feat: support MC 1.12–1.21.x on Spigot, Paper, and Folia
Co-authored-by: xydesu <46369463+xydesu@users.noreply.github.com>